--- a/config/symfony2/cache_services.yml
+++ b/config/symfony2/cache_services.yml
@@ -5,7 +5,7 @@ services:
     nil_portugues.cache:
         class: Path\To\Class
         arguments: 
-          - @nil_portugues.cache.adapter.in_memory_cache
+          - @nil_portugues.cache.adapter.in_memory_adapter
 
-    nil_portugues.cache.adapter.in_memory_cache:
+    nil_portugues.cache.adapter.in_memory_adapter:
         class: Path\To\Class
