--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "autoload": {
         "psr-4": {
-            "NilPortugues\\Cache\\": "src/",
+            "NilPortugues\\Cache\\": "src/"
         }
     },
     "autoload-dev": {
