--- a/config/symfony2/cache_services.yml
+++ b/config/symfony2/cache_services.yml
@@ -3,9 +3,9 @@ imports:
 
 services:
     nil_portugues.cache:
-        class: Path\To\Class
+        class: NilPortugues\Cache\Cache
         arguments: 
           - @nil_portugues.cache.adapter.in_memory_adapter
 
     nil_portugues.cache.adapter.in_memory_adapter:
-        class: Path\To\Class
+        class: NilPortugues\Cache\Adapter\InMemoryAdapter
