--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
             "email": "contact@nilportugues.com"
         }
     ],
+    "support": {
+        "email": "contact@nilportugues.com",
+        "issues": "https://github.com/nilopc/cache-layer/issues"
+    },
     "require": {
         "php": ">=5.4",
         "predis/predis": "1.1.*@dev"
@@ -40,5 +44,8 @@
         "branch-alias": {
             "dev-master": "1.0.x-dev"
         }
-    }  
+    },
+    "suggest": {
+        "ext-redis": "Native redis support for php."
+    }
 }
