FileSystemAdapter almost ready

--- a/config/symfony/cache_services.yml
+++ b/config/symfony/cache_services.yml
@@ -10,16 +10,15 @@ services:
         arguments:
           - [%redis_servers%]
           - @nil_portugues.cache.adapter.in_memory_adapter
-          - @nil_portugues.cache.adapter.in_memory_adapter
           
     nil_portugues.cache.adapter.redis.predis_adapter:
         class: NilPortugues\Cache\Adapter\Redis\PredisAdapter
         arguments:
           - [%redis_servers%]
           - @nil_portugues.cache.adapter.in_memory_adapter
-          - @nil_portugues.cache.adapter.in_memory_adapter
 
     nil_portugues.cache:
         class: NilPortugues\Cache\Cache
         arguments:
           - @nil_portugues.cache.adapter.redis.native_adapter
+          - "namespaced.cache"
