--- a/config/symfony/cache_parameters.yml
+++ b/config/symfony/cache_parameters.yml
@@ -1,3 +1,3 @@
   parameters:
     redis_servers:
-        {host: 127.0.0.1, port: 6379, database: 1, alias: cache1}
+        {host: 127.0.0.1, port: 6379, database: 1, alias: cache1, timeout: 1}
