suggesting memcached extension

--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         }
     },
     "suggest": {
-        "ext-redis": "Native redis support for php."
+        "ext-redis": "Native redis support for php.",
+        "ext-memcached": "Native memcached support for php."
     }
 }
