Reorganization of the dir structure to create Curl class for elastic search testing

--- a/config/symfony/cache_services.yml
+++ b/config/symfony/cache_services.yml
@@ -13,7 +13,7 @@ services:
           - @nil_portugues.cache.adapter.in_memory_adapter
 
     nil_portugues.cache.adapter.redis.native_adapter:
-        class: NilPortugues\Cache\Adapter\Redis\NativeAdapter
+        class: NilPortugues\Cache\Adapter\Redis\RedisAdapter
         arguments:
           - [%redis_servers%]
           - @nil_portugues.cache.adapter.in_memory_adapter
