--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -38,6 +38,7 @@
             <exclude>
                 <directory suffix=".php">./src/Adapter/SQL/Connection</directory>
                 <directory suffix=".php">./src/Adapter/ElasticSearch/</directory>
+                <directory suffix=".php">./src/Adapter/Memcached/</directory>
             </exclude>
         </whitelist>
     </filter>
