--- a/config/symfony/cache_parameters.yml
+++ b/config/symfony/cache_parameters.yml
@@ -9,6 +9,16 @@ parameters:
         port: 3306
       password: "dbpassword"
       user: "dbuser"
+  
+  postgresql_server:
+    cache_table: "__cache"
+    master:
+      database:
+        dbname: "my_database"
+        host: "127.0.0.1"
+        port: 5432
+      password: "dbpassword"
+      user: "dbuser"
 
   sphinx_server:
     cache_table: "cache"
