preparing the configuration sample files

--- a/config/symfony/cache_parameters.yml
+++ b/config/symfony/cache_parameters.yml
@@ -1,39 +1,62 @@
 parameters:
+    filesystem:
+        path: null/tmp"
 
-  mysql_server:
-    cache_table: "__cache"
-    master:
-      database:
-        dbname: "my_database"
-        host: "127.0.0.1"
-        port: 3306
-      password: "dbpassword"
-      user: "dbuser"
-  
-  postgresql_server:
-    cache_table: "__cache"
-    master:
-      database:
-        dbname: "my_database"
-        host: "127.0.0.1"
-        port: 5432
-      password: "dbpassword"
-      user: "dbuser"
+    redis:
+        cache1 :
+            alias: cache1
+            host: 127.0.0.1
+            port: 6379
+            database: 1
+            timeout: 1
 
-  sphinx_server:
-    cache_table: "cache"
-    master:
-      database:
-        dbname: ""
-        host: "127.0.0.1"
-        port: 9306
-      password: ""
-      user: ""
-      
-  redis_servers:
-    cache1:
-      alias: "cache1"
-      database: 1
-      host: "127.0.0.1"
-      port: 6379
-      timeout: 1
+    mysql:
+        cache_table: __cache
+        connections:
+            user: root
+            password: null
+            database:
+                dbname: my_database
+                host: localhost
+                port: 3306
+
+    postgresql:
+        cache_table: __cache
+        connections:
+            user: root
+            password: null
+            database:
+                dbname: my_database
+                host: localhost
+                port: 5432
+
+    sqlite:
+        cache_table: cache
+        connections:
+            user: null
+            password: null
+            database:
+                path: cache.db
+
+    sphinx:
+        cache_table: cache
+        connections:
+            user: null
+            password: null
+            database:
+                dbname: null
+                host: 127.0.0.1
+                port: 9306
+
+    memcached:
+        persistent_id: __cache
+        connections:
+            server1:
+                host: 127.0.0.1
+                port: 11211
+                weight: 1
+
+    elastic:
+        base_url: http://localhost:8000
+        index_name: cache
+
