--- a/migrations/sphinx.conf
+++ b/migrations/sphinx.conf
@@ -14,7 +14,7 @@ searchd
 index cache
 {
     type = rt
-    ##empty a rt index y changing the path.
+    ##empty a rt index by changing the path.
     path = /etc/sphinxsearch/cache_rt
 
     ## Table definition without sphinx id key
