--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "require": {
         "php": ">=5.4",
-        "predis/predis": "1.1.*@dev"
+        "predis/predis": "~1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.2",
