--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     },
     "require": {
         "php": ">=5.4",
-        "predis/predis": "~1.0"
+        "predis/predis": "~1.0",
+        "nilportugues/php_backslasher": "^0.2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.2",
