--- a/config/symfony/cache_services.yml
+++ b/config/symfony/cache_services.yml
@@ -2,68 +2,63 @@ imports:
     - { resource: cache_parameters.yml }
 
 services:
+    nil_portugues.cache.adapter.in_memory_adapter.factory:
+        class: NilPortugues\Cache\Adapter\InMemoryAdapterFactory
+
     nil_portugues.cache.adapter.in_memory_adapter:
         class: NilPortugues\Cache\Adapter\InMemoryAdapter
+        factory: ["@nil_portugues.cache.adapter.in_memory_adapter.factory", create]
 
     nil_portugues.cache.adapter.filesystem_adapter:
         class: NilPortugues\Cache\Adapter\FileSystemAdapter
         arguments:
          - %filesystem.path%
-         - @nil_portugues.cache.adapter.in_memory_adapter
 
     nil_portugues.cache.adapter.redis_adapter:
         class: NilPortugues\Cache\Adapter\RedisAdapter
         arguments:
          - %redis%
-         - @nil_portugues.cache.adapter.in_memory_adapter
 
     nil_portugues.cache.adapter.predis_adapter:
         class: NilPortugues\Cache\Adapter\PredisAdapter
         arguments:
          - %redis%
-         - @nil_portugues.cache.adapter.in_memory_adapter
 
     nil_portugues.cache.adapter.memcached_adapter:
         class: NilPortugues\Cache\Adapter\MemcachedAdapter
         arguments:
          - %memcached.persistent_id%
          - %memcached.connections%
-         - @nil_portugues.cache.adapter.in_memory_adapter
 
     nil_portugues.cache.adapter.mysql_adapter:
         class: NilPortugues\Cache\Adapter\MySqlAdapter
         arguments:
          - %mysql.connections%
          - %mysql.cache_table%
-         - @nil_portugues.cache.adapter.in_memory_adapter
 
     nil_portugues.cache.adapter.postgresql_adapter:
         class: NilPortugues\Cache\Adapter\PostgreSqlAdapter
         arguments:
          - %postgresql.connections%
          - %postgresql.cache_table%
-         - @nil_portugues.cache.adapter.in_memory_adapter
 
     nil_portugues.cache.adapter.sqlite_adapter:
         class: NilPortugues\Cache\Adapter\SqliteAdapter
         arguments:
          - %sqlite.connections%
          - %sqlite.cache_table%
-         - @nil_portugues.cache.adapter.in_memory_adapter
 
     nil_portugues.cache.adapter.sphinx_adapter:
         class: NilPortugues\Cache\Adapter\SphinxAdapter
         arguments:
          - %sphinx.connections%
          - %sphinx.cache_table%
-         - @nil_portugues.cache.adapter.in_memory_adapter
 
     nil_portugues.cache.adapter.elastic_search_adapter:
         class: NilPortugues\Cache\Adapter\ElasticSearchAdapter
         arguments:
          - %elastic.base_url%
          - %elastic.index_name%
-         - @nil_portugues.cache.adapter.in_memory_adapter
 
     nil_portugues.cache:
         class: NilPortugues\Cache\Cache
